--- a/samples/darksome.html
+++ b/samples/darksome.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <title>My HTML Page</title>
@@ -9,9 +10,12 @@
         font-family: Arial, sans-serif;
         background-color: #f0f0f0;
       }
+
     </style>
-    <p>This is a paragraph <a href="#">link</a> with a <span>character</span></p>
+    <p>This is a paragraph <a href="#">link</a> with a <span>character</span>
+    </p>
   </head>
+
   <body>
     <header id="main-header" class="header">
       <h1 style="color: #333; text-align: center;">
@@ -19,41 +23,47 @@
       </h1>
       <nav aria-label="another-navbar">
         <ul>
-          <li><a href="#about" title="About me">About</a></li>
-          <li><a href="#services" title="My services">Services</a></li>
-          <li><a href="#contact" title="Contact me">Contact</a></li>
+          <li><a href="#synopsis" title="About me">Synopsis</a></li>
+          <li><a href="#chapters" title="My services">Chapters</a></li>
+          <li><a href="#maps" title="Contact me">Maps</a></li>
+          <li><a href="#"></a></li>
         </ul>
       </nav>
-      <h1>The Book of John</h1>
-      <ul>
-        <li><a href="#about" title="About me">About</a></li>
-        <li><a href="#services" title="My services">Services</a></li>
-        <li><a href="#contact" title="Contact me">Contact</a></li>
-      </ul>
     </header>
-    <section id="about">
-      <h2>About me</h2>
-      <p><strong>Name:</strong> John Doe</p>
-      <p><strong>Occupation:</strong> Web developer</p>
-      <p><strong>Location:</strong> San Francisco, CA</p>
-      <p><strong>Skills:</strong> HTML, CSS, JavaScript</p>
+    <section id="synopsis">
+      <h2>The Book of John</h2>
+      <h3>Introduction</h3>
       <img src="https://example.com/image.jpg" alt="A sample image" width="200"
         height="200">
+      <p>
+        The Gospel of John is the fourth of the canonical gospels. Like the
+        other gospels it is anonymous, although it identifies an unnamed
+        "disciple whom Jesus loved" as the source of its traditions. It is
+        closely related in style and content to the three Johannine epistles,
+        and most scholars treat the four books, along with the Book of
+        Revelation, as a single corpus of Johannine literature, albeit not from
+        the same author. The discourses contained in this gospel seem to be
+        concerned with issues of the church–synagogue debate at the time of
+        composition. It is notable that in John, the community appears to
+        define itself primarily in contrast to Judaism, rather than as part of
+        a wider Christian community.
+      </p>
     </section>
-    <section id="services" class="services">
-      <h2>My services</h2>
-      <ul>
-        <li><strong>Web design:</strong> Custom website design for your business
+    <section id="chapters" class="chapters">
+      <h2>Chapters</h2>
+      <ol>
+        <li>
+          <h3>
+            <a href="https://example.com/chapter-1">Chapter 1</a>
+          </h3>
         </li>
-        <li><strong>Web development:</strong> Building and launching your
-          website</li>
-        <li><strong>Web hosting:</strong> Hosting your website on our servers
-        </li>
-      </ul>
+      </ol>
     </section>
     <!-- add a svg file -->
     <svg width="100" height="100">
-      <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" /></svg>
+      <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4"
+        fill="yellow" />
+    </svg>
 
     <section id="contact">
       <h2>Contact me</h2>
@@ -71,70 +81,19 @@
       </form>
     </section>
     <p>
-      In the beginning, was the Word, and the Word was with God, and the Word was God. The Word became flesh and dwelt among us, and we have seen his glory, glory as of the only Son from the <b>Father</b>, full of grace and truth. For from his fullness we have all received, grace upon grace. For the law was given through Moses; grace and truth came through <span class="red-text-style">Jesus Christ</span> No one has ever seen God; the only God, who is at the Father's side, he has made him known.
+      In the beginning, was the Word, and the Word was with God, and the Word
+      was God. The Word became flesh and dwelt among us, and we have seen his
+      glory, glory as of the only Son from the <b>Father</b>, full of grace and
+      truth. For from his fullness we have all received, grace upon grace. For
+      the law was given through Moses; grace and truth came through <span
+        class="red-text-style">Jesus Christ</span> No one has ever seen God; the
+      only God, who is at the Father's side, he has made him known.
     </p>
 
     <footer>
       <p>&copy;<span id="copyright"></span> All rights reserved.</p>
+      <p>Made with &hearts; </p>
     </footer>
-    <script>
-      const name = document.getElementById('name');
-
-      const email = document.getElementById('email');
-
-      const message = document.getElementById('message');
-
-      const submit = document.getElementById('submit');
-
-      submit.addEventListener('click', function() {
-
-        // Check if the name field is empty
-
-        if (name.value === '') {
-
-          // If it is, display an alert message
-
-          alert('Please enter your name');
-
-        }
-
-        // Check if the email field is empty
-
-        if (email.value === '') {
-
-          // If it is, display an alert message
-
-          alert('Please enter your email');
-
-        }
-
-        // Check if the message field is empty
-
-        if (message.value === '') {
-
-          // If it is, display an alert message
-
-          alert('Please enter your message');
-
-        }
-
-      });
-
-
-      // if everything is ok, submit the form submit the form
-
-      form.addEventListener('submit', function(event) {
-
-        // Prevent the form from being submitted
-
-        event.preventDefault();
-
-        // Display an alert message
-
-        alert('Form submitted successfully');
-
-      });
-
-    </script>
   </body>
+
 </html>
